# endo

./: .gitignore  Cargo.toml  Makefile  README.md
benches/: dna.rs
c-2007/: Makefile.am  commands  config.h  config.h.in  configure.ac  decode.c  main.c  rnaview.c
data/: selfcheck.sample
examples/: dnarna.rs  performance_dnarna.rs  performance_gperf_selfcheck.rs  performance_selfcheck.rs
src/: lib.rs  rna.rs
src/dna/: matchreplace.rs  mod.rs  pattern.rs  rope.rs  template.rs
tests/: selfcheck.rs
